--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -1,4 +1,8 @@
-@mixin main-theme-font-regular{
-  font-family: OpenSansRegular, sans-serif;
+@mixin birtday-font-regular{
+  font-family: BirthdayFont, sans-serif;
   font-weight: normal;
 }
+
+$body-color: #80DEEA;
+$font-color: #AA00FF;
+$line-color: #C2185B;
