Added a cat and a dog

--- a/src/components/main.scss
+++ b/src/components/main.scss
@@ -12,3 +12,5 @@
 @import "present-block/gift-box";
 @import "present-block/fire-works/fireworks";
 @import "present-block/cake/cake";
+@import "present-block/cat/cat";
+@import "present-block/dog/dog";
